# melee-rag

./: .gitignore  Dockerfile  compose.yml  create_db.py  main.py  pyproject.toml  requirements.in
app/: api.py  create_db.py  rag.py
chardata/: bowser.json  captain_falcon.json  donkey_kong.json  dr._mario.json  falco.json  fox.json  ganondorf.json  ice_climbers.json  jigglypuff.json  kirby.json  link.json  luigi.json  mario.json  marth.json  mewtwo.json  mr._game_&_watch.json  ness.json  peach.json  pichu.json  pikachu.json  roy.json  samus.json  sheik.json  yoshi.json  young_link.json  zelda.json
