[tool.poetry]
name = "melee-rag"
version = "0.1.0"
description = ""
authors = ["Jaya DeHart <dehartj97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.6.3"
langchain = "^0.3.19"
fastapi = "^0.115.8"
langchain-core = "^0.3.39"
langchain-openai = "^0.3.7"
langchain-text-splitters = "^0.3.6"
langchain-community = "^0.3.18"
tiktoken = "^0.9.0"
langchainhub = "^0.1.21"
langgraph = "^0.2.74"
beautifulsoup4 = "^4.13.3"
dotenv = "^0.9.9"
openai = "^1.64.0"
jq = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
